--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
     <groupId>co.ryred</groupId>
     <artifactId>RTKPlugin</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>3.0</version>
     <modules>
         <module>rtk-bukkit</module>
         <module>rtk-bungee</module>
